manifests/aultvfw.com/deployment-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aultvfw-stage
  labels:
    app.kubernetes.io/name: aultvfw-stage
    app.kubernetes.io/instance: aultvfw-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aultvfw-stage
      app.kubernetes.io/instance: aultvfw-stage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aultvfw-stage
        app.kubernetes.io/instance: aultvfw-stage
    spec:
      serviceAccountName: aultvfw
      securityContext:
        {}
      containers:
        - name: aultvfw-stage
          securityContext:
            {}
          image: "ghcr.io/awbsough/aultvfw.com:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources: {}
      imagePullSecrets:
        - name: githubsecret
