manifests/aultvfw.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aultvfw
  labels:
    app.kubernetes.io/name: aultvfw
    app.kubernetes.io/instance: aultvfw
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aultvfw
      app.kubernetes.io/instance: aultvfw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aultvfw
        app.kubernetes.io/instance: aultvfw
    spec:
      serviceAccountName: aultvfw
      securityContext:
        {}
      containers:
        - name: aultvfw
          securityContext:
            {}
          image: "ghcr.io/awbsough/aultvfw.com:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources: {}
      imagePullSecrets:
        - name: githubsecret
