manifests/aultvfw.com/service-stage.yaml
# Source: piwigo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aultvfw-stage
  labels:
    app.kubernetes.io/name: aultvfw-stage
    app.kubernetes.io/instance: aultvfw-stage
    app.kubernetes.io/version: "1.16.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: aultvfw-stage
    app.kubernetes.io/instance: aultvfw-stage
